--- a/viewpanel/templates/base.html
+++ b/viewpanel/templates/base.html
@@ -13,12 +13,13 @@
 
     <!--styles-->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.css') }}"/>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}"/>
+    <!--link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}"/-->
 </head>
 
 <body>
 <!--scripts-->
-<script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}"></script>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='bootstrap.js') }}"></script>
 
 {% block body %}
