--- a/viewpanel/templates/base.html
+++ b/viewpanel/templates/base.html
@@ -9,8 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}"/>
         <!--styles-->
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.css') }}"/>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap-responsive.css') }}"/>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}"/>
+
         <!--link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}"/-->
     </head>
 
@@ -18,7 +18,8 @@
         <!--scripts-->
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='bootstrap.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='css/bootstrap.js') }}"></script>
+
         {% block body %}
         {% endblock %}
     </body>
