--- a/viewpanel/templates/base.html
+++ b/viewpanel/templates/base.html
@@ -17,8 +17,8 @@
     <body>
         <!--scripts-->
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='css/bootstrap.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
 
         {% block body %}
         {% endblock %}
