--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -1,5 +1,8 @@
-<div class="container-fluid">
-<div class="modal fade">
+ <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="login">
+  Launch demo modal
+</button>
+
+<div class="modal fade" id="login">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -16,5 +19,3 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-
-</div>
