--- a/viewpanel/templates/login.html
+++ b/viewpanel/templates/login.html
@@ -1,6 +1,6 @@
-<div class="col-md-4">
+<div class=".col-xs-6 .col-md-4">
     <form class="form-horizontal" role="form">
-        <div class="form-group">
+    <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
 
             <div class="col-sm-10">
@@ -30,3 +30,4 @@
         </div>
     </form>
 </div>
+
