--- a/viewpanel/templates/index.html
+++ b/viewpanel/templates/index.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% include 'menu.html' %}
-{% include 'login.html' %}
+<div class="cotainer-fluid">
+    <div class="row">
+        <div class="spanx">
+            {% include 'login.html' %}
+        </div>
+    </div>
+</div>
+
 
 
 
