--- a/viewpanel/templates/base.html
+++ b/viewpanel/templates/base.html
@@ -8,11 +8,10 @@
             {% endblock %}
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}"/>
+        <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='img/favicon.ico') }}"/>
         <!--styles-->
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}"/>
-
-        <!--link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}"/-->
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css') }}">
     </head>
 
     <body>
