--- a/viewpanel/templates/base.html
+++ b/viewpanel/templates/base.html
@@ -8,20 +8,20 @@
             {% endblock %}
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='img/favicon.ico') }}"/>
+        <link rel="shortcut icon"  href="{{ url_for('static', filename='img/favicon.ico') }}"/>
         <!--styles-->
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}"/>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css') }}"/>
     </head>
 
     <body>
+        {% block body %}
+        {% endblock %}
         <!--scripts-->
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) Added at the end so the page loads faster-->
         <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
 
-            {% block body %}
-            {% endblock %}
 
     </body>
 </html>
