--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -10,14 +10,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Service Desk Aid</a>
+                <a class="navbar-brand" href="/"><i class="ico-logo"></i> Service Desk Aid</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="Users/">Users</a></li>
-                    <li><a href="Graphs/">Graphs</a></li>
-                    <li><a href="/">Time Zones</a></li>
+                    <li><a href="Users/"></i>Users</a></li>
+                    <li><a href="Graphs/"><i class="glyphicon glyphicon-stats"></i> Graphs</a></li>
+                    <li><a href="/"><i class="glyphicon glyphicon-time"></i> Time Zones</a></li>
                 </ul>
                 <form class="navbar-form navbar-right" role="search">
                     <div class="form-group">
@@ -26,8 +26,8 @@
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
                 <div>
-                    <p class="navbar-text navbar-right">Signed in as
-                        <a href="#" class="navbar-link">Victor</a>
+                    <p class="navbar-text navbar-right"><i class="glyphicon glyphicon-user"></i>
+                        <a href="#" class="navbar-link"> Victor</a>
                     </p>
                 </div>
             <!-- /.navbar-collapse -->
