--- a/viewpanel/templates/login.html
+++ b/viewpanel/templates/login.html
@@ -1,8 +1,12 @@
 <div class="container">
     <div id="loginbox" style="margin-top:100px;" class="mainbox col-md-5 col-md-offset-3 col-sm-8 col-sm-offset-2">
-        <div class="panel panel-info" >
+        <div class="panel panel-default" >
+            <div class="panel-heading">
+                <h3 class="panel-title">Login</h3>
+            </div>
             <div style="padding-top:30px" class="panel-body" >
                 <form id="loginform" class="form-horizontal" role="form">
+
                     <div style="margin-bottom: 25px" class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                         <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="username">
@@ -21,7 +25,7 @@
                     <div style="margin-top:10px" class="form-group">
                         <!-- Button -->
                         <div class="col-sm-12 controls">
-                            <a id="btn-login" href="#" class="btn btn-info btn-block">Login  </a>
+                            <a id="btn-login" href="#" class="btn btn-info btn-lg btn-block">Login  </a>
                         </div>
                     </div>
                 </form>
