--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -10,20 +10,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"><i class="ico-logo"></i> Service Desk Aid</a>
+                    <a class="navbar-brand" href="/">Service Desk Aid</a>
+                    <img class="menubar-logo" src="{{ url_for('static', filename='img/favicon.ico') }}"/>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="Users/"></i>Users</a></li>
+                    <li><a href="Users/"><i class="glyphicon glyphicon-list"></i></i> Users</a></li>
                     <li><a href="Graphs/"><i class="glyphicon glyphicon-stats"></i> Graphs</a></li>
-                    <li><a href="/"><i class="glyphicon glyphicon-time"></i> Time Zones</a></li>
+                    <li><a href="Clock/"><i class="glyphicon glyphicon-time"></i> Time Zones</a></li>
                 </ul>
                 <form class="navbar-form navbar-right" role="search">
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Ticket number">
                     </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
+                    <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-ok"></i> </i> </button>
                 </form>
                 <div>
                     <p class="navbar-text navbar-right"><i class="glyphicon glyphicon-user"></i>
