--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -10,8 +10,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                    <a class="navbar-brand" href="/">Service Desk Aid</a>
+                <div class="pull-left">
                     <img class="menubar-logo" src="{{ url_for('static', filename='img/favicon.ico') }}"/>
+                </div>
+                    <a class="navbar-brand" href="/">Service Desk Aid</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
