added request account feature but no js yet

--- a/viewpanel/templates/login.html
+++ b/viewpanel/templates/login.html
@@ -28,6 +28,15 @@
                             <a id="btn-login" href="#" class="btn btn-info btn-lg btn-block">Login  </a>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <div class="col-md-12 control">
+                            <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%; align:center; " >
+                            <a href="#" onClick="$('#loginbox').hide(); $('#signupbox').show()">
+                                Request an account
+                            </a>
+                            </div>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
