--- a/viewpanel/templates/flipclock.html
+++ b/viewpanel/templates/flipclock.html
@@ -1,10 +1,7 @@
-{% extends 'base.html'%}
-<div class="clock"></div>
-<div class="message"></div>
-<script type="text/javascript">
-    var clock = $('.clock').FlipClock({
-        clockFace: 'TwentyFourHourClock'
-        });
-
-
-</script>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="clock" style="aling:center;"></div>
+        </div>
+    </div>
+</div>
