--- a/viewpanel/templates/flipclock.html
+++ b/viewpanel/templates/flipclock.html
@@ -1,7 +1,5 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-6">
-            <div class="clock" style="aling:center;"></div>
-        </div>
+<div class="container">
+    <div class="col-md-offset-4">
+        <div class="clock"></div>
     </div>
 </div>
