--- a/viewpanel/templates/login.html
+++ b/viewpanel/templates/login.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div id="loginbox" style="margin-top:100px;" class="mainbox col-md-5 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div id="loginbox" style="margin-top:100px;" class="mainbox col-md-5 col-md-offset-3 ">
         <div class="panel panel-default" >
             <div class="panel-heading">
                 <h3 class="panel-title">Sign in</h3>
