--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -18,19 +18,63 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="Users/"><i class="glyphicon glyphicon-list"></i></i> Users</a></li>
-                    <li><a href="Graphs/"><i class="glyphicon glyphicon-stats"></i> Graphs</a></li>
-                    <li><a href="Clock/"><i class="glyphicon glyphicon-time"></i> Time Zones</a></li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown">
+                            <i class="glyphicon glyphicon-globe"></i>
+                            Live Feed<b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/viewpanel">View open</a></li>
+                            <li><a href="/viewpanl">Recently closed</a></li>
+                        </ul>
+                    </li>
+                    <li class=dropdown>
+                        <a class="dropdown-toggle" data-toggle="dropdown">
+                            <i class="glyphicon glyphicon-list"></i>
+                            Users<b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/users">View Users</a></li>
+                            <li><a href="/wall">Wall</a></li>
+                        </ul>
+                    </li>
+                    <li class=dropdown>
+                        <a class="dropdown-toggle" data-toggle="dropdown">
+                            <i class="glyphicon glyphicon-stats"></i>
+                            Graphs<b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">View</a></li>
+                            <li><a href="#">Customize</a></li>
+                        </ul>
+                    </li>
+                    <li class=dropdown>
+                        <a class="dropdown-toggle" data-toggle="dropdown">
+                            <i class="glyphicon glyphicon-time"></i>
+                            Time zones<b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">View</a></li>
+                            <li><a href="#">Customize</a></li>
+                        </ul>
+                    </li>
                 </ul>
-                <form class="navbar-form navbar-right" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Ticket number">
-                    </div>
-                    <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-ok"></i> </i> </button>
-                </form>
-                <div>
-                    <p class="navbar-text navbar-right"><i class="glyphicon glyphicon-user"></i>
-                        <a href="#" class="navbar-link"> Victor</a>
+                <div class="container-fluid">
+                    <form class="navbar-form navbar-right" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Ticket number">
+                            <button type="search" class="btn btn-default">Search</button>
+                        </div>
+                    </form>
+                    <p class="navbar-text navbar-right">
+                        <a class="dropdown dropdown-toggle" data-toggle="dropdown">
+                            <i class="glyphicon glyphicon-user"></i>
+                            Profile<b class="caret"></b>
+                        </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Customize</a></li>
+                        <li><a href="#">Logout</a></li>
+                    </ul>
                     </p>
                 </div>
                 <!-- /.navbar-collapse -->
