--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -59,24 +59,24 @@
                         </ul>
                     </li>
                 </ul>
-                <div class="container-fluid">
-                    <form class="navbar-form navbar-right" role="search">
+
+                <form class="navbar-form navbar-right" role="search">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Ticket number">
-                            <button type="search" class="btn btn-default">Search</button>
+                            <button type="submit" class="btn btn-default">Search</button>
                         </div>
                     </form>
-                    <p class="navbar-text navbar-right">
-                        <a class="dropdown dropdown-toggle" data-toggle="dropdown">
-                            <i class="glyphicon glyphicon-user"></i>
-                            Profile<b class="caret"></b>
-                        </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Customize</a></li>
-                        <li><a href="#">Logout</a></li>
-                    </ul>
-                    </p>
-                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
+                                class="glyphicon glyphicon-user"></i> Victor <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Customize</a></li>
+                            <li><a href="#">Logout</a></li>
+                        </ul>
+                    </li>
+                </ul>
+
                 <!-- /.navbar-collapse -->
             </div>
          </div>
