--- a/viewpanel/templates/base.html
+++ b/viewpanel/templates/base.html
@@ -12,6 +12,7 @@
         <!--styles-->
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}"/>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css') }}"/>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/flipclock.css') }}"/>
     </head>
 
     <body>
@@ -21,7 +22,26 @@
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) Added at the end so the page loads faster-->
         <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/flipclock.min.js') }}"></script>
+        <script type="text/javascript">
+		var clock;
+
+		$(document).ready(function() {
+			var clock;
+
+			clock = $('.clock').FlipClock(10, {
+		        clockFace: 'MinuteCounter',
+		        countdown: true,
+		        callbacks: {
+		        	stop: function() {
+		        		$('.message').html('The clock has stopped!')
+		        	}
+		        }
+		    });
+
+		});
 
 
+        </script>
     </body>
 </html>
