--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -1,10 +1,10 @@
-<div class="contaier">
+<div class="container-fluid">
     <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse"
-                        data-target="#bs-example-navbar-collapse-1">
+                        data-target="#menu-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -13,10 +13,10 @@
                 <div class="pull-left">
                     <img class="menubar-logo" src="{{ url_for('static', filename='img/favicon.ico') }}"/>
                 </div>
-                    <a class="navbar-brand" href="/">Service Desk Aid</a>
+                <a class="navbar-brand" href="/">Service Desk Aid</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="menu-collapse">
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown">
@@ -54,18 +54,18 @@
                             Time zones<b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">View</a></li>
+                            <li><a href="/timezones">View</a></li>
                             <li><a href="#">Customize</a></li>
                         </ul>
                     </li>
                 </ul>
 
                 <form class="navbar-form navbar-right" role="search">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Ticket number">
-                            <button type="submit" class="btn btn-default">Search</button>
-                        </div>
-                    </form>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Ticket number">
+                        <button type="submit" class="btn btn-default">Search</button>
+                    </div>
+                </form>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
@@ -76,10 +76,9 @@
                         </ul>
                     </li>
                 </ul>
-
                 <!-- /.navbar-collapse -->
             </div>
-         </div>
+        </div>
         <!-- /.container-fluid -->
     </nav>
 </div>
