added query class

--- a/viewpanel/templates/login.html
+++ b/viewpanel/templates/login.html
@@ -25,7 +25,7 @@
                     <div style="margin-top:10px" class="form-group">
                         <!-- Button -->
                         <div class="col-sm-12 controls">
-                            <a id="btn-login" href="#" class="btn btn-info btn-lg btn-block">Login  </a>
+                            <a type="submit" id="btn-login" href="#" class="btn btn-info btn-lg btn-block">Login  </a>
                         </div>
                     </div>
                     <div class="form-group">
@@ -67,7 +67,7 @@
                     <div style="margin-top:10px" class="form-group">
                         <!-- Button -->
                         <div class="col-sm-12 controls">
-                            <a id="btn-signup" href="#" class="btn btn-info btn-lg btn-block">Sign up</a>
+                            <a type="submit" id="btn-signup" href="#" class="btn btn-info btn-lg btn-block">Sign up</a>
                         </div>
                     </div>
                     <div class="form-group">
