added pygal and testing it out

--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -45,7 +45,7 @@
                             Graphs<b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">View</a></li>
+                            <li><a href="/graphs">View</a></li>
                             <li><a href="#">Customize</a></li>
                         </ul>
                     </li>
