--- a/viewpanel/templates/graphs.html
+++ b/viewpanel/templates/graphs.html
@@ -1,3 +1,3 @@
     <figure>
-      <embed type="image/svg+xml" src="bar_chart.svg" />
+      <embed type="image/svg+xml" src="/home/vectra/projects/servicedeskaid/viewpanel/templates/bar_chart.svg"/>
     </figure>
