--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -69,8 +69,18 @@
                 </form>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
-                                class="glyphicon glyphicon-user"></i> Victor <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+			  
+			  <i class="glyphicon glyphicon-user"></i> 
+			  {% block body %}
+			      {% set loggedin=false%}
+			      {% if loggedin: %} 
+			          {% print "Victor" %}
+			      {% else %}
+			          {% print "Login" %}
+			      {% endif %}
+			  {% endblock%}
+			  <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Customize</a></li>
                             <li><a href="#">Logout</a></li>
