--- a/viewpanel/templates/login.html
+++ b/viewpanel/templates/login.html
@@ -1,4 +1,4 @@
 {% extends 'base.html' %}
 {% include 'menu.html' %}
-{% include 'login_form.html' %}
+{% include 'login_static.html' %}
 {% include 'flipclock.html' %}
