--- a/viewpanel/templates/login_static.html
+++ b/viewpanel/templates/login_static.html
@@ -5,19 +5,19 @@
                 <h3 class="panel-title">Sign in</h3>
             </div>
             <div style="padding-top:30px" class="panel-body" >
-                <form id="loginform" class="form-horizontal" role="form" method="get">
+                <form id="loginform" class="form-horizontal" role="form" method="post">
                     <div style="margin-bottom: 25px" class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <input id="login-username" type="text" class="form-control" name="username" placeholder="username">
+                        <input id="login-username" type="text" class="form-control" name="loginname" placeholder="username">
                     </div>
                     <div style="margin-bottom: 25px" class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                        <input id="login-password" type="password" class="form-control" name="password" placeholder="password">
+                        <input id="login-password" type="password" class="form-control" name="loginpass" placeholder="password">
                     </div>
                     <div class="input-group">
                         <div class="checkbox">
                             <label>
-                                <input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
+                                <input id="login-remember" type="checkbox" name="loginremember" value="1"> Remember me
                             </label>
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                 <h3 class="panel-title">Sign up</h3>
             </div>
             <div style="padding-top:30px" class="panel-body" >
-                <form id="signupform" class="form-horizontal" role="form" method="get">
+                <form id="signupform" class="form-horizontal" role="form" method="post">
                     <div id="signupalert" style="display:none" class="alert alert-danger">
                         <p>Error:</p>
                         <span></span>
