--- a/viewpanel/templates/viewpanel_static.html
+++ b/viewpanel/templates/viewpanel_static.html
@@ -9,25 +9,25 @@
       </tr>
    </thead>
    <tbody>
-      <tr class="active">
-         <td>Product1</td>
+      <tr class="active" >
+         <td><a href="#" class="btn btn-primary">Issue #1</td>
          <td>23/11/2013</td>
-         <td>Pending</td>
+         <td>Closed</td>
       </tr>
       <tr class="success">
-         <td>Product2</td>
+         <td><a href="#" class="btn btn-primary">Issue #2</td>
          <td>10/11/2013</td>
-         <td>Delivered</td>
+         <td>Solved</td>
       </tr>
       <tr  class="warning">
-         <td>Product3</td>
+         <td><a href="#" class="btn btn-primary">Issue #3</td>
          <td>20/10/2013</td>
-         <td>In Call to confirm</td>
+         <td>Pending</td>
       </tr>
       <tr  class="danger">
-         <td>Product4</td>
+         <td><a href="#" class="btn btn-primary">Issue #4</td>
          <td>20/10/2013</td>
-         <td>Declined</td>
+         <td>Critical</td>
       </tr>
    </tbody>
 </table>
