--- a/viewpanel/templates/flipclock.html
+++ b/viewpanel/templates/flipclock.html
@@ -1,5 +1,7 @@
-<div class="container">
-    <div class="col-md-offset-4">
-        <div class="clock"></div>
+<div class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container">
+        <div class="col-md-offset-4">
+            <div class="clock"></div>
+        </div>
     </div>
 </div>
