--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -20,17 +20,17 @@
             <div class="collapse navbar-collapse" id="menu-collapse">
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown">
+                        <a href= "#" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="glyphicon glyphicon-globe"></i>
                             Live Feed<b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="/viewpanel">View open</a></li>
-                            <li><a href="/viewpanl">Recently closed</a></li>
+                            <li><a href="/viewpanel">Recently closed</a></li>
                         </ul>
                     </li>
                     <li class=dropdown>
-                        <a class="dropdown-toggle" data-toggle="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="glyphicon glyphicon-list"></i>
                             Users<b class="caret"></b>
                         </a>
@@ -40,7 +40,7 @@
                         </ul>
                     </li>
                     <li class=dropdown>
-                        <a class="dropdown-toggle" data-toggle="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="glyphicon glyphicon-stats"></i>
                             Graphs<b class="caret"></b>
                         </a>
@@ -50,7 +50,7 @@
                         </ul>
                     </li>
                     <li class=dropdown>
-                        <a class="dropdown-toggle" data-toggle="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="glyphicon glyphicon-time"></i>
                             Time zones<b class="caret"></b>
                         </a>
@@ -70,19 +70,18 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-			  
-			  <i class="glyphicon glyphicon-user"></i>
-			  {% block body %}
-			      {% set loggedin=false%}
-			      {% if loggedin: %} 
-			          {% print "Victor" %}
-			      {% else %}
-			          {% print "Login" %}
-			      {% endif %}
-			  {% endblock%} 
-			  <b class="caret"></b></a>
+			            <i class="glyphicon glyphicon-user"></i>
+                          {% block body %}
+                              {% set loggedin=false%}
+                              {% if loggedin %}
+                                  {% print "Victor" %}
+                              {% else %}
+                                  {% print "Login" %}
+                              {% endif %}
+                          {% endblock%}
+			            <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-			    <li><a href="/login">Login</a></li>
+                            <li><a href="/login">Login</a></li>
                             <li><a href="#">Customize</a></li>
                             <li><a href="#">Logout</a></li>
                         </ul>
