--- a/viewpanel/templates/login_static.html
+++ b/viewpanel/templates/login_static.html
@@ -21,6 +21,9 @@
                             </label>
                         </div>
                     </div>
+		    {% if error %}
+		    <p class="error"><strong>Error:</strong> {{ error }}
+		    {% endif %}
                     <div style="margin-top:10px" class="form-group">
                         <!-- Button -->
                         <div class="col-sm-12 controls">
