fixed templating, removed index, moved wall as default index

--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -36,7 +36,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="/users">View Users</a></li>
-                            <li><a href="/wall">Wall</a></li>
+                            <li><a href="/">Wall</a></li>
                         </ul>
                     </li>
                     <li class=dropdown>
@@ -45,7 +45,7 @@
                             Graphs<b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="/graphs">View</a></li>
+                            <li><a href="/statistic">View</a></li>
                             <li><a href="#">Customize</a></li>
                         </ul>
                     </li>
