--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -42,7 +42,7 @@
                     <li class=dropdown>
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="glyphicon glyphicon-stats"></i>
-                            Graphs<b class="caret"></b>
+                            Statistics<b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="/statistic">View</a></li>
