refactored login, added form validation

--- a/viewpanel/templates/login.html
+++ b/viewpanel/templates/login.html
@@ -25,8 +25,8 @@
             </div>
           </div>
 	  {% if error %}
-	  <p class="error"><strong>Error:</strong> {{ error }}
-	    {% endif %}
+	  <p style="color: red">{{error}}</p>
+	  {% endif %}
             <div style="margin-top:10px" class="form-group">
               <!-- Button -->
               <div class="col-sm-12 controls">
