--- a/viewpanel/templates/viewpanel.html
+++ b/viewpanel/templates/viewpanel.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% include 'menu2.html' %}
+{% include 'menu.html' %}
 {% block body %}
 <div class="container-fluid">
   <table class="table">
