--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -63,29 +63,29 @@
 
                 <form class="navbar-form navbar-right" role="search">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Ticket number">
+                      <input type="text" class="form-control" placeholder="Ticket number">
                         <button type="submit" class="btn btn-default">Search</button>
                     </div>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-			            <i class="glyphicon glyphicon-user"></i>
-                          {% block body %}
-                              {% set loggedin=false%}
-                              {% if loggedin %}
-                                  {% print "Victor" %}
-                              {% else %}
-                                  {% print "Login" %}
-                              {% endif %}
-                          {% endblock%}
-			            <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/login">Login</a></li>
-                            <li><a href="#">Customize</a></li>
-                            <li><a href="#">Logout</a></li>
-                        </ul>
-                    </li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+		      <i class="glyphicon glyphicon-user"></i>
+		      {% block body %}
+		          {% print g.user %}
+		          {% if g.user %}
+                              {% print g.user %}
+		          {% else %}
+                              {% print "Login" %}
+		          {% endif %}
+		      {% endblock%}
+		      <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="/login">Login</a></li>
+                      <li><a href="#">Customize</a></li>
+                      <li><a href="#">Logout</a></li>
+                    </ul>
+                  </li>
                 </ul>
                 <!-- /.navbar-collapse -->
             </div>
