--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <nav class="navbar navbar-default" role="navigation">
+    <nav class="navbar navbar-default" id="menubar" role="navigation">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -46,7 +46,6 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="/statistic">View</a></li>
-                            <li><a href="#">Customize</a></li>
                         </ul>
                     </li>
 		    <li class=dropdown>
@@ -57,8 +56,8 @@
                       <ul class="dropdown-menu">
                         <li><a href="/cpanel">Application Settings</a></li>
                         <li><a href="#">User Settings</a></li>
-                        <li><a href="#">Customize SDA</a></li>
-                        <li><a href="#">Customize</a></li>
+			<li><a href="#">DB Settings</a></li>
+                        <li><a href="#">Visual Settings</a></li>
                       </ul>
                     </li>
                     <li class=dropdown>
@@ -68,7 +67,6 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="/timezones">View</a></li>
-                            <li><a href="#">Customize</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -92,7 +90,7 @@
 		      <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                       <li><a href="/login">Login</a></li>
-                      <li><a href="#">Customize</a></li>
+                      <li><a href="#">3Customize</a></li>
                       <li><a href="#">Logout</a></li>
                     </ul>
                   </li>
