--- a/viewpanel/templates/wall.html
+++ b/viewpanel/templates/wall.html
@@ -1,2 +1,7 @@
 {% extends 'base.html' %}
 {% include 'menu.html' %}
+{% block body  %}
+<div class="col-md-offset-3" id="chatbar" >
+  <textarea class="form-control" id="chatbar" placeholder="@ticket info" focus></textarea>
+</div>
+{% endblock %}
