removed box, added signup actions

--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -89,8 +89,8 @@
 		      {% endblock%}
 		      <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                      <li><a href="/login">Login</a></li>
-                      <li><a href="#">3Customize</a></li>
+                      <li><a href="/login">Sign In</a></li>
+                      <li><a href="#">Customize</a></li>
                       <li><a href="#">Logout</a></li>
                     </ul>
                   </li>
