--- a/viewpanel/templates/login.html
+++ b/viewpanel/templates/login.html
@@ -52,10 +52,11 @@
         <h3 class="panel-title">Sign up</h3>
       </div>
       <div style="padding-top:30px" class="panel-body" >
-        <form id="signupform" class="form-horizontal" role="form" method="post">
+        <form id="signupform" class="form-horizontal" role="form" action="/signup" method="post">
           <div id="signupalert" style="display:none" class="alert alert-danger">
-            <p>Error:</p>
-            <span></span>
+	  {% if error %}
+	  <p style="color: red">{{error}}</p>
+	  {% endif %}
           </div>
           <div style="margin-bottom: 25px" class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
