added new issues option menu

--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -25,8 +25,10 @@
                             Live Feed<b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="/viewpanel">View open</a></li>
-                            <li><a href="/viewpanel">Recently closed</a></li>
+			  <li><a href="/viewpanel">Open new issue</a></li>
+			  <li><a href="/viewpanel">Search Issue</a></li>
+                          <li><a href="/viewpanel">View open</a></li>
+                          <li><a href="/viewpanel">Recently closed</a></li>
                         </ul>
                     </li>
                     <li class=dropdown>
