fixed the menu and the wall and moved clock to footer

--- a/viewpanel/templates/wall.html
+++ b/viewpanel/templates/wall.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% include 'menu.html' %}
-{% block body  %}
+{% block footer %}
 <div class="container-fluid">
   <div class="col-md-5 col-md-offset-5">
     <div class="clock"></div>
