--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -21,7 +21,7 @@
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
                         <a href= "#" class="dropdown-toggle" data-toggle="dropdown">
-                            <li class="glyphicon glyphicon-dashboard"></li>
+                            <i class="glyphicon glyphicon-dashboard"></i>
                             Live Feed<b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
