fixed colors in menu and other visual stuff

--- a/servicedeskaid/templates/menu.html
+++ b/servicedeskaid/templates/menu.html
@@ -1,5 +1,5 @@
 <nav>
-  <div class="nav-wrapper">
+  <div class="nav-wrapper light-blue lighten-3">
     <a href="#!" class="brand-logo">ServicedeskAid</a>
     <ul class="right hide-on-med-and-down">
       <li><a href="sass.html"><i class="mdi-action-search"></i></a></li>
