removed ref for old version and a few minor changes

--- a/servicedeskaid/static/css/custom.css
+++ b/servicedeskaid/static/css/custom.css
@@ -1,7 +1,16 @@
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    flex: 1 0 auto;
+}
+
+
 #signup-form {
     padding-top: 10%;
     text-align: center;
 }
+
 
 .clock {
     position: relative !important;
